--- a/my-project/composer.json
+++ b/my-project/composer.json
@@ -10,10 +10,10 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "tymon/jwt-auth": "dev-develop"
+        "tymon/jwt-auth": "dev-develop",
+        "intervention/image": "dev-master"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
